tests/NormalTests/paczka1/small_fuzzy/81540241.err
Error in line 2: 8hDLoAsICuP S246 46,9
Error in line 1: ep0hrm S254 15,0
